# TicTacToeQt

./: CMakeLists.txt  GameWindow.cpp  GameWindow.h  GameWindow.ui  TicTacToe.pro  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Board/: IBoard.h  TicTacToeBoard.cpp  TicTacToeBoard.h
Documents/: tictactoe_implementaton.docx
Documents/html/: _game_window_8h_source.html  _i_board_8h_source.html  _i_game_manager_8h_source.html  _i_manager_8h_source.html  _i_player_8h_source.html  _i_score_8h_source.html  _singleton_8h_source.html  _tic_tac_toe_board_8h_source.html  _tic_tac_toe_game_manager_8h_source.html  _tic_tac_toe_player_8h_source.html  _tic_tac_toe_score_8h_source.html  annotated.html  class_case-members.html  class_case.html  class_custom_game_widget-members.html  class_custom_game_widget.html  class_game_window-members.html  class_game_window.html  class_i_board-members.html  class_i_board.html  class_i_game_manager-members.html  class_i_game_manager.html  class_i_manager-members.html  class_i_manager.html  class_i_player-members.html  class_i_player.html  class_i_score-members.html  class_i_score.html  (+28 more)
Manager/: IGameManager.h  IManager.h  TicTacToeGameManager.cpp  TicTacToeGameManager.h
Misc/: Singleton.h
Player/: IPlayer.h  TicTacToePlayer.h
Score/: IScore.h  TicTacToeScore.h
Widget/: TicTacToeBoardWidget.cpp  TicTacToeBoardWidget.h  TicTacToeBoardWidget.ui  camerawidget.cpp  camerawidget.h  camerawidget.ui  customgamewidget.cpp  customgamewidget.h  customgamewidget.ui  tictactoegamebutton.cpp  tictactoegamebutton.h
(+61 files in other folders)
